--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "styled-components": "^5.3.0",
+    "use-sound": "^4.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
